--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^12.0.7",
     "chroma-js": "^2.1.2",
     "html2canvas": "^1.3.3",
     "next": "12.0.7",
+    "next-mdx-remote": "^3.0.8",
     "papaparse": "^5.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
