--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.7",
     "chroma-js": "^2.1.2",
+    "friendly-challenge": "^0.9.0",
     "html2canvas": "^1.3.3",
     "next": "12.0.7",
     "next-mdx-remote": "^3.0.8",
+    "node-telegram-bot-api": "^0.56.0",
     "papaparse": "^5.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
