--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.7",
     "chroma-js": "^2.1.2",
+    "dotenv": "^10.0.0",
     "friendly-challenge": "^0.9.0",
     "html2canvas": "^1.3.3",
     "next": "12.0.7",
