--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "friendly-challenge": "^0.9.0",
     "html2canvas": "^1.3.3",
     "next": "12.0.7",
+    "next-compose-plugins": "^2.2.1",
     "next-mdx-remote": "^3.0.8",
+    "next-transpile-modules": "^9.0.0",
     "node-telegram-bot-api": "^0.56.0",
     "papaparse": "^5.3.1",
     "react": "17.0.2",
