--- a/package.json
+++ b/package.json
@@ -26,7 +26,18 @@
     "papaparse": "^5.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-modal": "^3.14.4"
+    "react-modal": "^3.14.4",
+    "array.prototype.findindex": "^2.0.2",
+    "bl": "^1.2.3",
+    "bluebird": "^3.5.1",
+    "debug": "^3.1.0",
+    "depd": "^1.1.1",
+    "eventemitter3": "^3.0.0",
+    "file-type": "^3.9.0",
+    "mime": "^1.6.0",
+    "pump": "^2.0.0",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "eslint": "8.4.0",
